@@ -1608,7 +1608,7 @@ CLANWEBSITES=[] /web/pub/clan/<CLANNAME> /web/clan.templates
 # Use <CLANNAME> in a journal name in order to insert the clans name.
 # Use <CLANTYPE> in a journal name in order to insert the clans govt type.
 # * Do not include any spaces before your equal signs!
-CLANFORUMDATA=[] a Journal of <CLANTYPE> <CLANNAME> READ=-<1 POST=-<1 REPLY=-<1  EXPIRE=0
+CLANFORUMDATA=[] a Journal of <CLANTYPE> <CLANNAME> READ=-<1 POST=-<1 -CLAN "+<CLANNAME>(JOURNAL)" REPLY=-<1 -CLAN "+<CLANNAME>(JOURNAL)" ADMIN=-<1 -CLAN "+<CLANNAME>(ASSIGN)" -CLAN "+<CLANNAME>(JOURNAL)" EXPIRE=0
 
 ######################################################################
 # MSP (Sound) Settings
