@@ -1232,6 +1232,8 @@ public interface Clan extends Cloneable, Tickable, CMCommon, Modifiable, Tattooa
 		CLAN_TITLES,
 		/** constant for the clan function writing MOTD messages. @see Clan#getAuthority(int,Function) */
 		CLAN_MOTD,
+		/** constant for the clan function writing Journal messages. @see Clan#getAuthority(int,Function) */
+		JOURNAL
 	}
 
 	/**
