@@ -27,6 +27,7 @@
             <POWER>HOME_PRIVS</POWER>
             <POWER>CLAN_BENEFITS</POWER>
             <POWER>CLAN_TITLES</POWER>
+            <POWER>JOURNAL</POWER>
         </POSITION>
         <POSITION ID="LIEUTENANT" ROLEID=5 RANK=1 NAME="LIEUTENANT" PLURAL="LIEUTENANTS" MAX=999999 INNERMASK="" PUBLIC="true">
             <POWER>ACCEPT</POWER>
@@ -42,6 +43,7 @@
             <POWER>HOME_PRIVS</POWER>
             <POWER>CLAN_BENEFITS</POWER>
             <POWER>CLAN_TITLES</POWER>
+            <POWER>JOURNAL</POWER>
         </POSITION>
         <POSITION ID="TREASURER" ROLEID=4 RANK=2 NAME="TREASURER" PLURAL="TREASURERS" MAX=1 INNERMASK="" PUBLIC="true">
             <POWER>WITHDRAW</POWER>
@@ -54,6 +56,7 @@
             <POWER>HOME_PRIVS</POWER>
             <POWER>CLAN_BENEFITS</POWER>
             <POWER>CLAN_TITLES</POWER>
+            <POWER>JOURNAL</POWER>
         </POSITION>
         <POSITION ID="ENCHANTER" ROLEID=3 RANK=3 NAME="ENCHANTER" PLURAL="ENCHANTERS" MAX=3 INNERMASK="" PUBLIC="true">
             <POWER>DEPOSIT</POWER>
@@ -65,6 +68,7 @@
             <POWER>HOME_PRIVS</POWER>
             <POWER>CLAN_BENEFITS</POWER>
             <POWER>CLAN_TITLES</POWER>
+            <POWER>JOURNAL</POWER>
         </POSITION>
         <POSITION ID="STAFF" ROLEID=2 RANK=4 NAME="STAFF" PLURAL="STAFF" MAX=999999 INNERMASK="" PUBLIC="true">
             <POWER>DEPOSIT</POWER>
@@ -75,6 +79,7 @@
             <POWER>HOME_PRIVS</POWER>
             <POWER>CLAN_BENEFITS</POWER>
             <POWER>CLAN_TITLES</POWER>
+            <POWER>JOURNAL</POWER>
         </POSITION>
         <POSITION ID="MEMBER" ROLEID=1 RANK=5 NAME="MEMBER" PLURAL="MEMBERS" MAX=999999 INNERMASK="" PUBLIC="false">
             <POWER>DEPOSIT</POWER>
@@ -84,6 +89,7 @@
             <POWER>HOME_PRIVS</POWER>
             <POWER>CLAN_BENEFITS</POWER>
             <POWER>CLAN_TITLES</POWER>
+            <POWER>JOURNAL</POWER>
         </POSITION>
         <POSITION ID="APPLICANT" ROLEID=0 RANK=6 NAME="APPLICANT" PLURAL="APPLICANTS" MAX=999999 INNERMASK="" PUBLIC="false">
         </POSITION>
@@ -170,6 +176,7 @@
             <POWER>HOME_PRIVS</POWER>
             <POWER>CLAN_BENEFITS</POWER>
             <POWER>CLAN_TITLES</POWER>
+            <POWER>JOURNAL</POWER>
         </POSITION>
         <POSITION ID="SECRETARY" ROLEID=5 RANK=1 NAME="SECRETARY" PLURAL="SECRETARIES" MAX=999999 INNERMASK="" PUBLIC="true">
             <POWER>ACCEPT</POWER>
@@ -187,6 +194,7 @@
             <POWER>HOME_PRIVS</POWER>
             <POWER>CLAN_BENEFITS</POWER>
             <POWER>CLAN_TITLES</POWER>
+            <POWER>JOURNAL</POWER>
         </POSITION>
         <POSITION ID="TREASURER" ROLEID=4 RANK=2 NAME="TREASURER" PLURAL="TREASURERS" MAX=1 INNERMASK="" PUBLIC="true">
             <POWER>WITHDRAW</POWER>
@@ -200,6 +208,7 @@
             <POWER>HOME_PRIVS</POWER>
             <POWER>CLAN_BENEFITS</POWER>
             <POWER>CLAN_TITLES</POWER>
+            <POWER>JOURNAL</POWER>
         </POSITION>
         <POSITION ID="ENCHANTER" ROLEID=3 RANK=3 NAME="ENCHANTER" PLURAL="ENCHANTERS" MAX=3 INNERMASK="" PUBLIC="true">
             <POWER>DEPOSIT</POWER>
@@ -212,6 +221,7 @@
             <POWER>HOME_PRIVS</POWER>
             <POWER>CLAN_BENEFITS</POWER>
             <POWER>CLAN_TITLES</POWER>
+            <POWER>JOURNAL</POWER>
         </POSITION>
         <POSITION ID="CHIEF" ROLEID=2 RANK=4 NAME="CHIEF" PLURAL="CHIEFS" MAX=999999 INNERMASK="" PUBLIC="true">
             <POWER>DEPOSIT</POWER>
@@ -223,6 +233,7 @@
             <POWER>HOME_PRIVS</POWER>
             <POWER>CLAN_BENEFITS</POWER>
             <POWER>CLAN_TITLES</POWER>
+            <POWER>JOURNAL</POWER>
         </POSITION>
         <POSITION ID="MEMBER" ROLEID=1 RANK=5 NAME="MEMBER" PLURAL="MEMBERS" MAX=999999 INNERMASK="" PUBLIC="false">
             <POWER>DEPOSIT</POWER>
@@ -233,6 +244,7 @@
             <POWER>HOME_PRIVS</POWER>
             <POWER>CLAN_BENEFITS</POWER>
             <POWER>CLAN_TITLES</POWER>
+            <POWER>JOURNAL</POWER>
         </POSITION>
         <POSITION ID="APPLICANT" ROLEID=0 RANK=6 NAME="APPLICANT" PLURAL="APPLICANTS" MAX=999999 INNERMASK="" PUBLIC="false">
         </POSITION>
@@ -316,6 +328,7 @@
             <POWER>HOME_PRIVS</POWER>
             <POWER>CLAN_BENEFITS</POWER>
             <POWER>CLAN_TITLES</POWER>
+            <POWER>JOURNAL</POWER>
         </POSITION>
         <POSITION ID="SECRETARY" ROLEID=5 RANK=1 NAME="SECRETARY" PLURAL="SECRETARIES" MAX=1 INNERMASK="" PUBLIC="true">
             <POWER>PROPERTY_OWNER</POWER>
@@ -329,6 +342,7 @@
             <POWER>HOME_PRIVS</POWER>
             <POWER>CLAN_BENEFITS</POWER>
             <POWER>CLAN_TITLES</POWER>
+            <POWER>JOURNAL</POWER>
         </POSITION>
         <POSITION ID="TREASURER" ROLEID=4 RANK=2 NAME="TREASURER" PLURAL="TREASURERS" MAX=1 INNERMASK="" PUBLIC="true">
             <POWER>WITHDRAW</POWER>
@@ -341,6 +355,7 @@
             <POWER>HOME_PRIVS</POWER>
             <POWER>CLAN_BENEFITS</POWER>
             <POWER>CLAN_TITLES</POWER>
+            <POWER>JOURNAL</POWER>
         </POSITION>
         <POSITION ID="ENCHANTER" ROLEID=3 RANK=3 NAME="ENCHANTER" PLURAL="ENCHANTERS" MAX=3 INNERMASK="" PUBLIC="true">
             <POWER>DEPOSIT</POWER>
@@ -353,6 +368,7 @@
             <POWER>HOME_PRIVS</POWER>
             <POWER>CLAN_BENEFITS</POWER>
             <POWER>CLAN_TITLES</POWER>
+            <POWER>JOURNAL</POWER>
         </POSITION>
         <POSITION ID="SHERIFF" ROLEID=2 RANK=4 NAME="SHERIFF" PLURAL="SHERIFFS" MAX=999999 INNERMASK="" PUBLIC="true">
             <POWER>DEPOSIT</POWER>
@@ -365,6 +381,7 @@
             <POWER>HOME_PRIVS</POWER>
             <POWER>CLAN_BENEFITS</POWER>
             <POWER>CLAN_TITLES</POWER>
+            <POWER>JOURNAL</POWER>
         </POSITION>
         <POSITION ID="CITIZEN" ROLEID=1 RANK=5 NAME="CITIZEN" PLURAL="CITIZENS" MAX=999999 INNERMASK="" PUBLIC="false">
             <POWER>DEPOSIT</POWER>
@@ -376,6 +393,7 @@
             <POWER>HOME_PRIVS</POWER>
             <POWER>CLAN_BENEFITS</POWER>
             <POWER>CLAN_TITLES</POWER>
+            <POWER>JOURNAL</POWER>
         </POSITION>
         <POSITION ID="APPLICANT" ROLEID=0 RANK=6 NAME="APPLICANT" PLURAL="APPLICANTS" MAX=999999 INNERMASK="" PUBLIC="false">
         </POSITION>
@@ -463,6 +481,7 @@
             <POWER>HOME_PRIVS</POWER>
             <POWER>CLAN_BENEFITS</POWER>
             <POWER>CLAN_TITLES</POWER>
+            <POWER>JOURNAL</POWER>
         </POSITION>
         <POSITION ID="MANAGER" ROLEID=5 RANK=1 NAME="MANAGER" PLURAL="MANAGERS" MAX=999999 INNERMASK="" PUBLIC="true">
             <POWER>PROPERTY_OWNER</POWER>
@@ -477,6 +496,7 @@
             <POWER>HOME_PRIVS</POWER>
             <POWER>CLAN_BENEFITS</POWER>
             <POWER>CLAN_TITLES</POWER>
+            <POWER>JOURNAL</POWER>
         </POSITION>
         <POSITION ID="TREASURER" ROLEID=4 RANK=2 NAME="TREASURER" PLURAL="TREASURERS" MAX=999999 INNERMASK="" PUBLIC="true">
             <POWER>WITHDRAW</POWER>
@@ -490,6 +510,7 @@
             <POWER>HOME_PRIVS</POWER>
             <POWER>CLAN_BENEFITS</POWER>
             <POWER>CLAN_TITLES</POWER>
+            <POWER>JOURNAL</POWER>
         </POSITION>
         <POSITION ID="ENCHANTER" ROLEID=3 RANK=3 NAME="ENCHANTER" PLURAL="ENCHANTERS" MAX=999999 INNERMASK="" PUBLIC="true">
             <POWER>DEPOSIT</POWER>
@@ -503,6 +524,7 @@
             <POWER>HOME_PRIVS</POWER>
             <POWER>CLAN_BENEFITS</POWER>
             <POWER>CLAN_TITLES</POWER>
+            <POWER>JOURNAL</POWER>
         </POSITION>
         <POSITION ID="SOLDIER" ROLEID=2 RANK=4 NAME="SOLDIER" PLURAL="SOLDIERS" MAX=999999 INNERMASK="" PUBLIC="true">
             <POWER>DEPOSIT</POWER>
@@ -516,6 +538,7 @@
             <POWER>HOME_PRIVS</POWER>
             <POWER>CLAN_BENEFITS</POWER>
             <POWER>CLAN_TITLES</POWER>
+            <POWER>JOURNAL</POWER>
         </POSITION>
         <POSITION ID="CITIZEN" ROLEID=1 RANK=5 NAME="CITIZEN" PLURAL="CITIZENS" MAX=999999 INNERMASK="" PUBLIC="false">
             <POWER>DEPOSIT</POWER>
@@ -528,6 +551,7 @@
             <POWER>HOME_PRIVS</POWER>
             <POWER>CLAN_BENEFITS</POWER>
             <POWER>CLAN_TITLES</POWER>
+            <POWER>JOURNAL</POWER>
         </POSITION>
         <POSITION ID="APPLICANT" ROLEID=0 RANK=6 NAME="APPLICANT" PLURAL="APPLICANTS" MAX=999999 INNERMASK="" PUBLIC="false">
         </POSITION>
@@ -626,6 +650,7 @@
             <POWER>HOME_PRIVS</POWER>
             <POWER>CLAN_BENEFITS</POWER>
             <POWER>CLAN_TITLES</POWER>
+            <POWER>JOURNAL</POWER>
         </POSITION>
         <POSITION ID="PRIEST" ROLEID=5 RANK=1 NAME="PRIEST" PLURAL="PRIESTS" MAX=999999 INNERMASK="-BASECLASS +CLERIC -DEITY +%[WORSHIPCHARID]%" PUBLIC="true">
             <POWER>ACCEPT</POWER>
@@ -642,6 +667,7 @@
             <POWER>HOME_PRIVS</POWER>
             <POWER>CLAN_BENEFITS</POWER>
             <POWER>CLAN_TITLES</POWER>
+            <POWER>JOURNAL</POWER>
         </POSITION>
         <POSITION ID="TREASURER" ROLEID=4 RANK=2 NAME="TREASURER" PLURAL="TREASURERS" MAX=1 INNERMASK="-DEITY +%[WORSHIPCHARID]%" PUBLIC="true">
             <POWER>WITHDRAW</POWER>
@@ -655,6 +681,7 @@
             <POWER>HOME_PRIVS</POWER>
             <POWER>CLAN_BENEFITS</POWER>
             <POWER>CLAN_TITLES</POWER>
+            <POWER>JOURNAL</POWER>
         </POSITION>
         <POSITION ID="ENCHANTER" ROLEID=3 RANK=3 NAME="ENCHANTER" PLURAL="ENCHANTERS" MAX=3 INNERMASK="-DEITY +%[WORSHIPCHARID]%" PUBLIC="true">
             <POWER>DEPOSIT</POWER>
@@ -668,6 +695,7 @@
             <POWER>HOME_PRIVS</POWER>
             <POWER>CLAN_BENEFITS</POWER>
             <POWER>CLAN_TITLES</POWER>
+            <POWER>JOURNAL</POWER>
         </POSITION>
         <POSITION ID="CRUSADER" ROLEID=2 RANK=4 NAME="CRUSADER" PLURAL="CRUSADERS" MAX=999999 INNERMASK="-DEITY +%[WORSHIPCHARID]%" PUBLIC="true">
             <POWER>DEPOSIT</POWER>
@@ -680,6 +708,7 @@
             <POWER>HOME_PRIVS</POWER>
             <POWER>CLAN_BENEFITS</POWER>
             <POWER>CLAN_TITLES</POWER>
+            <POWER>JOURNAL</POWER>
         </POSITION>
         <POSITION ID="BELIEVER" ROLEID=1 RANK=5 NAME="BELIEVER" PLURAL="BELIEVERS" MAX=999999 INNERMASK="-DEITY +%[WORSHIPCHARID]%" PUBLIC="false">
             <POWER>DEPOSIT</POWER>
@@ -692,6 +721,7 @@
             <POWER>HOME_PRIVS</POWER>
             <POWER>CLAN_BENEFITS</POWER>
             <POWER>CLAN_TITLES</POWER>
+            <POWER>JOURNAL</POWER>
         </POSITION>
         <POSITION ID="APPLICANT" ROLEID=0 RANK=6 NAME="APPLICANT" PLURAL="APPLICANTS" MAX=999999 INNERMASK="-DEITY +%[WORSHIPCHARID]%" PUBLIC="false">
         </POSITION>
@@ -781,6 +811,7 @@
             <POWER>HOME_PRIVS</POWER>
             <POWER>CLAN_BENEFITS</POWER>
             <POWER>CLAN_TITLES</POWER>
+            <POWER>JOURNAL</POWER>
         </POSITION>
         <POSITION ID="MATRON" ROLEID=5 RANK=0 NAME="MATRON" PLURAL="MATRONS" MAX=1 INNERMASK="-MALE -NEUTER" PUBLIC="true">
             <POWER>ACCEPT</POWER>
@@ -806,6 +837,7 @@
             <POWER>HOME_PRIVS</POWER>
             <POWER>CLAN_BENEFITS</POWER>
             <POWER>CLAN_TITLES</POWER>
+            <POWER>JOURNAL</POWER>
         </POSITION>
         <POSITION ID="MISTRESS" ROLEID=4 RANK=1 NAME="MISTRESS" PLURAL="MISTRESSES" MAX=999999 INNERMASK="-MALE -NEUTER" PUBLIC="true">
             <POWER>ACCEPT</POWER>
@@ -823,6 +855,7 @@
             <POWER>HOME_PRIVS</POWER>
             <POWER>CLAN_BENEFITS</POWER>
             <POWER>CLAN_TITLES</POWER>
+            <POWER>JOURNAL</POWER>
         </POSITION>
         <POSITION ID="MISTER" ROLEID=3 RANK=1 NAME="MISTER" PLURAL="MISTERS" MAX=999999 INNERMASK="-FEMALE -NEUTER" PUBLIC="true">
             <POWER>ACCEPT</POWER>
@@ -840,6 +873,7 @@
             <POWER>HOME_PRIVS</POWER>
             <POWER>CLAN_BENEFITS</POWER>
             <POWER>CLAN_TITLES</POWER>
+            <POWER>JOURNAL</POWER>
         </POSITION>
         <POSITION ID="COUSIN" ROLEID=2 RANK=2 NAME="COUSIN" PLURAL="COUSINS" MAX=999999 INNERMASK="" PUBLIC="true">
             <POWER>ACCEPT</POWER>
@@ -853,6 +887,7 @@
             <POWER>HOME_PRIVS</POWER>
             <POWER>CLAN_BENEFITS</POWER>
             <POWER>CLAN_TITLES</POWER>
+            <POWER>JOURNAL</POWER>
         </POSITION>
         <POSITION ID="CHILD" ROLEID=1 RANK=3 NAME="CHILD" PLURAL="CHILDREN" MAX=999999 INNERMASK="" PUBLIC="true">
             <POWER>DEPOSIT</POWER>
@@ -864,6 +899,7 @@
             <POWER>HOME_PRIVS</POWER>
             <POWER>CLAN_BENEFITS</POWER>
             <POWER>CLAN_TITLES</POWER>
+            <POWER>JOURNAL</POWER>
         </POSITION>
         <POSITION ID="BLACKSHEEP" ROLEID=0 RANK=4 NAME="BLACK-SHEEP" PLURAL="BLACK-SHEEP" MAX=999999 INNERMASK="" PUBLIC="true">
             <POWER>DEPOSIT</POWER>
@@ -875,6 +911,7 @@
             <POWER>HOME_PRIVS</POWER>
             <POWER>CLAN_BENEFITS</POWER>
             <POWER>CLAN_TITLES</POWER>
+            <POWER>JOURNAL</POWER>
         </POSITION>
     </POSITIONS>
     <VOTING />
@@ -956,6 +993,7 @@
             <POWER>HOME_PRIVS</POWER>
             <POWER>CLAN_BENEFITS</POWER>
             <POWER>CLAN_TITLES</POWER>
+            <POWER>JOURNAL</POWER>
         </POSITION>
     </POSITIONS>
     <VOTING />
@@ -1046,6 +1084,7 @@
             <POWER>HOME_PRIVS</POWER>
             <POWER>CLAN_BENEFITS</POWER>
             <POWER>CLAN_TITLES</POWER>
+            <POWER>JOURNAL</POWER>
         </POSITION>
         <POSITION ID="MEMBER" ROLEID=1 RANK=1 NAME="MEMBER" PLURAL="MEMBERS" MAX=2147483647 INNERMASK="" PUBLIC="false">
             <POWER>PROPERTY_OWNER</POWER>
@@ -1061,6 +1100,7 @@
             <POWER>HOME_PRIVS</POWER>
             <POWER>CLAN_BENEFITS</POWER>
             <POWER>CLAN_TITLES</POWER>
+            <POWER>JOURNAL</POWER>
         </POSITION>
         <POSITION ID="APPLICANT" ROLEID=0 RANK=2 NAME="APPLICANT" PLURAL="APPLICANTS" MAX=2147483647 INNERMASK="" PUBLIC="false">
         </POSITION>
@@ -1123,6 +1163,7 @@
             <POWER>HOME_PRIVS</POWER>
             <POWER>CLAN_BENEFITS</POWER>
             <POWER>CLAN_TITLES</POWER>
+            <POWER>JOURNAL</POWER>
         </POSITION>
         <POSITION ID="HOUSE FATHER" ROLEID=2 RANK=0 NAME="HOUSE FATHER" PLURAL="HOUSE FATHERS" MAX=1 INNERMASK="-GENDER +MALE" PUBLIC="true">
             <POWER>ACCEPT</POWER>
@@ -1144,6 +1185,7 @@
             <POWER>HOME_PRIVS</POWER>
             <POWER>CLAN_BENEFITS</POWER>
             <POWER>CLAN_TITLES</POWER>
+            <POWER>JOURNAL</POWER>
         </POSITION>
         <POSITION ID="MEMBER" ROLEID=1 RANK=1 NAME="MEMBER" PLURAL="MEMBERS" MAX=999999 INNERMASK="" PUBLIC="true">
             <POWER>DEPOSIT</POWER>
@@ -1155,6 +1197,7 @@
             <POWER>HOME_PRIVS</POWER>
             <POWER>CLAN_BENEFITS</POWER>
             <POWER>CLAN_TITLES</POWER>
+            <POWER>JOURNAL</POWER>
         </POSITION>
         <POSITION ID="APPLICANT" ROLEID=0 RANK=2 NAME="APPLICANT" PLURAL="APPLICANTS" MAX=999999 INNERMASK="" PUBLIC="false">
         </POSITION>
@@ -1243,6 +1286,7 @@
             <POWER>HOME_PRIVS</POWER>
             <POWER>CLAN_BENEFITS</POWER>
             <POWER>CLAN_TITLES</POWER>
+            <POWER>JOURNAL</POWER>
         </POSITION>
         <POSITION ID="ENTREPRENEUR" ROLEID=4 RANK=1 NAME="ENTREPRENEUR" PLURAL="ENTREPRENEURS" MAX=5% INNERMASK="" PUBLIC="true">
             <POWER>WITHDRAW</POWER>
@@ -1264,6 +1308,7 @@
             <POWER>HOME_PRIVS</POWER>
             <POWER>CLAN_BENEFITS</POWER>
             <POWER>CLAN_TITLES</POWER>
+            <POWER>JOURNAL</POWER>
         </POSITION>
         <POSITION ID="DILIGENT WORKER" ROLEID=3 RANK=2 NAME="DILIGENT WORKER" PLURAL="DILIGENT WORKERS" MAX=10% INNERMASK="" PUBLIC="false">
             <POWER>DEPOSIT</POWER>
@@ -1277,6 +1322,7 @@
             <POWER>HOME_PRIVS</POWER>
             <POWER>CLAN_BENEFITS</POWER>
             <POWER>CLAN_TITLES</POWER>
+            <POWER>JOURNAL</POWER>
         </POSITION>
         <POSITION ID="HARD WORKER" ROLEID=2 RANK=3 NAME="HARD WORKER" PLURAL="HARD WORKERS" MAX=50% INNERMASK="" PUBLIC="false">
             <POWER>DEPOSIT</POWER>
@@ -1289,6 +1335,7 @@
             <POWER>HOME_PRIVS</POWER>
             <POWER>CLAN_BENEFITS</POWER>
             <POWER>CLAN_TITLES</POWER>
+            <POWER>JOURNAL</POWER>
         </POSITION>
         <POSITION ID="WORKER" ROLEID=1 RANK=4 NAME="WORKER" PLURAL="WORKER" MAX=999999 INNERMASK="" PUBLIC="false">
             <POWER>DEPOSIT</POWER>
@@ -1296,6 +1343,7 @@
             <POWER>LIST_MEMBERS</POWER>
             <POWER>CLAN_BENEFITS</POWER>
             <POWER>CLAN_TITLES</POWER>
+            <POWER>JOURNAL</POWER>
         </POSITION>
         <POSITION ID="APPLICANT" ROLEID=0 RANK=5 NAME="APPLICANT" PLURAL="APPLICANTS" MAX=999999 INNERMASK="" PUBLIC="false">
         </POSITION>
@@ -1386,6 +1434,7 @@
             <POWER>HOME_PRIVS</POWER>
             <POWER>CLAN_BENEFITS</POWER>
             <POWER>CLAN_TITLES</POWER>
+            <POWER>JOURNAL</POWER>
         </POSITION>
         <POSITION ID="MOGUL" ROLEID=4 RANK=1 NAME="MOGUL" PLURAL="MOGULS" MAX=3% INNERMASK="" PUBLIC="true">
             <POWER>DEPOSIT</POWER>
@@ -1400,6 +1449,7 @@
             <POWER>HOME_PRIVS</POWER>
             <POWER>CLAN_BENEFITS</POWER>
             <POWER>CLAN_TITLES</POWER>
+            <POWER>JOURNAL</POWER>
         </POSITION>
         <POSITION ID="LANDLORD" ROLEID=3 RANK=2 NAME="LANDLORD" PLURAL="LANDLORDS" MAX=5% INNERMASK="" PUBLIC="false">
             <POWER>DEPOSIT</POWER>
@@ -1412,6 +1462,7 @@
             <POWER>HOME_PRIVS</POWER>
             <POWER>CLAN_BENEFITS</POWER>
             <POWER>CLAN_TITLES</POWER>
+            <POWER>JOURNAL</POWER>
         </POSITION>
         <POSITION ID="TENNANT" ROLEID=2 RANK=3 NAME="HARD WORKER" PLURAL="HARD WORKERS" MAX=50% INNERMASK="" PUBLIC="false">
             <POWER>DEPOSIT</POWER>
@@ -1421,6 +1472,7 @@
             <POWER>HOME_PRIVS</POWER>
             <POWER>CLAN_BENEFITS</POWER>
             <POWER>CLAN_TITLES</POWER>
+            <POWER>JOURNAL</POWER>
         </POSITION>
         <POSITION ID="SERF" ROLEID=1 RANK=4 NAME="WORKER" PLURAL="WORKER" MAX=999999 INNERMASK="" PUBLIC="false">
             <POWER>DEPOSIT</POWER>
@@ -1428,6 +1480,7 @@
             <POWER>LIST_MEMBERS</POWER>
             <POWER>CLAN_BENEFITS</POWER>
             <POWER>CLAN_TITLES</POWER>
+            <POWER>JOURNAL</POWER>
         </POSITION>
         <POSITION ID="APPLICANT" ROLEID=0 RANK=5 NAME="APPLICANT" PLURAL="APPLICANTS" MAX=999999 INNERMASK="" PUBLIC="false">
         </POSITION>
