@@ -40,8 +40,8 @@
 +SECURITY -cmdrooms +area cmditems,(<WORD> only those with listed flags)
 -MOOD +grumpy +normal (<WORD> all except those with given moods)
 +MOOD -grumpy -normal (<WORD> only those with subtracted moods)
--CLAN +Killers "+The Avengers" (<WORD> all except those in listed clan)
-+CLAN -Killers "-Avengers" (<WORD> only those in a listed clan)
+-CLAN "+The Boyz" +Monkeys (<WORD> all except those in listed clan(s))
++CLAN "-The Boyz(CHIEF)" (<WORD> only those in a listed clan w/role/func)
 -DEITY +Apollo "+Grothon" (<WORD> all except worshippers of listed deity)
 +DEITY -God "-Rothon 1" (<WORD> only worshippers of a listed deity)
 -ANYCLASS +thief +ranger (<WORD> all except those with a multi-class)
